--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,5 +1,6 @@
 extends ../includes/layout
 
 block main-content
-  section.main-content
-    h1 Hello World
+    section.content
+        div(ng-view)
+    
