--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,10 +1,11 @@
 doctype
 html
-  head
-    link(href="/favicon.ico", rel="shortcut icon", type='image/x-icon')
-    link(rel="stylesheet", href="/css/bootstrap.css")
-    link(res="stylesheet", href="/vendor/toastr/toastr.css")
-    link(res="stylesheet", href="/css/bootstrap.css")
-  body
-    block main-content
-    include scripts
+    head
+        link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/vendor/toastr/toastr.css")
+        link(rel="stylesheet", href="/css/site.css")
+    base(href="/")
+    body(ng-app='app')
+        block main-content
+        include scripts
