--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,7 +1,18 @@
 extends ../includes/layout
 
 block main-content
+    .navbar.navbar-inverse.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href="/") MultiCourse
+            h6 - Learning Resources
+        .navbar-collapse.collapse 
+          ul.nav.navbar-nav
+            li 
+              a(href="/") Home
+
     section.content
         div(ng-view)
-    h2= mongoMessage
     
+    footer.container.text-center
+      p &copy; 2016 Rob Merrill
