--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -1,2 +1,10 @@
-h1 This is a Partial
-h2 {{ myVar }}
+.container
+  .jumbotron
+    h1 MultiCourse
+    p Here is a bunch of text about stuff
+
+  .row
+    .col-md-6
+      div(ng-include="'/partials/featured-courses'")
+    .col-md-6
+      div(ng-include="'/partials/new-courses'")
