--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -10,8 +10,8 @@ block main-content
           ul.nav.navbar-nav
             li 
               a(href="/") Home
-          div(ng-include="'/partials/navbar-login'")
-          
+          div(ng-include="'/partials/account/navbar-login'")
+
     section.content
         div(ng-view)
     
